feat: Implement OAuth2 authentication flow and JWT session management